--- a/Notebook/path/ed-donner_llm/week3/day1+colab_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day1+colab_ja.ipynb
@@ -111,9 +111,9 @@
    "source": [
     "# import\n",
     "\n",
-    "# Google Colab でSecretを安全に使う\n",
+    "# Google Colab で Secret を使う\n",
     "from google.colab import userdata\n",
-    "# Hugging Face Hub にログイン\n",
+    "# Hugging Faceにログイン\n",
     "from huggingface_hub import login\n",
     "\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
