--- a/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day2+pipelines_ja.ipynb
@@ -165,9 +165,9 @@
     "\n",
     "# PyTorch\n",
     "import torch\n",
-    "# Google Colab でSecretを安全に使う\n",
+    "# Google Colab で Secret を使う\n",
     "from google.colab import userdata\n",
-    "# Hugging Face Hub にログイン\n",
+    "# Hugging Faceにログイン\n",
     "from huggingface_hub import login\n",
     "# Hugging Face の transformers の pipeline\n",
     "from transformers import pipeline\n",
@@ -226,7 +226,8 @@
    },
    "outputs": [],
    "source": [
-    "# Hugging Face Hub にプログラムからログイン\n",
+    "# Hugging Faceにログイン\n",
+    "\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
