--- a/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day3+tokenizers_ja.ipynb
@@ -123,9 +123,9 @@
    "source": [
     "# import\n",
     "\n",
-    "# Google Colab でSecretを安全に使う\n",
+    "# Google Colab で Secret を使う\n",
     "from google.colab import userdata\n",
-    "# Hugging Face Hub にログイン\n",
+    "# Hugging Faceにログイン\n",
     "from huggingface_hub import login\n",
     "# Hugging Face の transformers の AutoTokenizer\n",
     "from transformers import AutoTokenizer"
@@ -176,7 +176,8 @@
    },
    "outputs": [],
    "source": [
-    "# Hugging Face Hub にプログラムからログイン\n",
+    "# Hugging Faceにログイン\n",
+    "\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
