--- a/Notebook/path/ed-donner_llm/week4/day4_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week4/day4_ja.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 環境\n",
+    "# .envファイルから環境変数をロード\n",
     "\n",
     "load_dotenv(override=True)\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
@@ -401,7 +401,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hugging Face Hub にプログラムからログイン\n",
+    "# Hugging Faceにログイン\n",
+    "\n",
     "hf_token = os.environ['HF_TOKEN']\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
