--- a/Notebook/path/ed-donner_llm/week6/day2+google_colab_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day2+google_colab_ja.ipynb
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "# Colab Runtime環境で利用可能なCPUコアとRAMを確認して印刷\n",
+    "# Colab Runtime環境で利用可能なCPUコアとRAMを確認してプリント\n",
     "# これはデータ処理に使用されるリソースを理解するのに役立つ\n",
     "import psutil\n",
     "print(f\"CPU cores: {psutil.cpu_count()}\")\n",
