--- a/Notebook/path/ed-donner_llm/week6/day3_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day3_ja.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# environment\n",
+    "# .envファイルから環境変数をロード\n",
     "\n",
     "load_dotenv(override=True)\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
