--- a/Notebook/path/ed-donner_llm/week6/day4_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week6/day4_ja.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# environment\n",
+    "# .envファイルから環境変数をロード\n",
     "\n",
     "load_dotenv(override=True)\n",
     "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY', 'your-key-if-not-using-env')\n",
@@ -504,7 +504,8 @@
    "source": [
     "# まずは、フロンティアモデル向けに良いプロンプトを作ってみましょう。\n",
     "# items.pyの中で設定した「1ドル単位で」(to the nearest dollar) という文言を取り除いていることに注目してください。\n",
-    "# 私たちが自前のモデルをトレーニングする場合、問題をできるだけ簡単にする必要がありますが、フロンティアモデルにはそのような簡略化は必要ありません。\n",
+    "# \"How much does this cost to the nearest dollar?\" → \"How much does this cost?\"\n",
+    "# OSSのLLMをトレーニングする場合、問題を簡単にする必要があるが、フロンティアモデルには必要ない。\n",
     "def messages_for(item):\n",
     "    system_message = \"You estimate prices of items. Reply only with the price, no explanation\"\n",
     "    user_prompt = item.test_prompt().replace(\" to the nearest dollar\",\"\").replace(\"\\n\\nPrice is $\",\"\")\n",
