--- a/Notebook/path/ed-donner_llm/week7/day5+testing_our_Fine-tuned_model_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week7/day5+testing_our_Fine-tuned_model_ja.ipynb
@@ -157,7 +157,8 @@
    },
    "outputs": [],
    "source": [
-    "# Hugging Face Hub にプログラムからログイン\n",
+    "# Hugging Faceにログイン\n",
+    "\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
