--- a/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week3/day5+mmp_ja.ipynb
@@ -108,11 +108,11 @@
     "# PyTorch\n",
     "import torch\n",
     "\n",
-    "# Google Colab でSecretを安全に使う\n",
+    "# Google Colab で Secret を使う\n",
     "from google.colab import userdata\n",
     "# Google Colab で Google drive を使う\n",
     "from google.colab import drive\n",
-    "# Hugging Face Hub にログイン\n",
+    "# Hugging Faceにログイン\n",
     "from huggingface_hub import login\n",
     "# Hugging Face の transformers の ライブラリ\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, TextStreamer, BitsAndBytesConfig"
@@ -210,7 +210,8 @@
    },
    "outputs": [],
    "source": [
-    "# Hugging Face Hub にプログラムからログイン\n",
+    "# Hugging Faceにログイン\n",
+    "\n",
     "hf_token = userdata.get('HF_TOKEN')\n",
     "login(hf_token, add_to_git_credential=True)"
    ]
