--- a/Notebook/path/ed-donner_llm/week8/day5_ja.ipynb
+++ b/Notebook/path/ed-donner_llm/week8/day5_ja.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# 価格は正しいです\n",
     "\n",
-    "最後のステップは、ユーザーインターフェイスを構築することです\n",
+    "最後のステップはユーザーインターフェースの構築です。\n",
     "\n",
-    "グラデーションのより高度な側面を使用します - ピースごとに構築します。"
+    "Gradio のより高度な機能を活用し、一つずつ構築していきます。"
    ]
   },
   {
@@ -20,8 +20,11 @@
    "outputs": [],
    "source": [
     "import gradio as gr\n",
-    "from deal_agent_framework import DealAgentFramework\n",
-    "from agents.deals import Opportunity, Deal"
+    "\n",
+    "# `./agents/deals.py`\n",
+    "from agents.deals import Opportunity, Deal\n",
+    "# `deal_agent_framework.py`\n",
+    "from deal_agent_framework import DealAgentFramework"
    ]
   },
   {
@@ -34,11 +37,15 @@
     "with gr.Blocks(title=\"The Price is Right\", fill_width=True) as ui:\n",
     "\n",
     "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:24px\">The Price is Right - Deal Hunting Agentic AI</div>')\n",
-    "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:14px\">Autonomous agent framework that finds online deals, collaborating with a proprietary fine-tuned LLM deployed on Modal, and a RAG pipeline with a frontier model and Chroma.</div>')\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:24px\">The Price is Right - Deal Hunting Agentic AI</div>'\n",
+    "            '<div style=\"text-align: center;font-size:24px\">価格は適正 - お得な情報を探すエージェント型AI</div>'\n",
+    "        )\n",
     "        \n",
-    "\n",
+    "    with gr.Row():\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:14px\">Autonomous agent framework that finds online deals, collaborating with a proprietary fine-tuned LLM deployed on Modal, and a RAG pipeline with a frontier model and Chroma.</div>')\n",
+    "            '<div style=\"text-align: center;font-size:14px\">Modal に展開された独自の微調整された LLM と連携し、フロンティア モデルと Chroma を備えた RAG パイプラインを使用して、オンライン取引を検索する自律エージェント フレームワークです。</div>')\n",
     "ui.launch(inbrowser=True)"
    ]
   },
@@ -62,12 +69,21 @@
     "        return [[opp.deal.product_description, opp.deal.price, opp.estimate, opp.discount, opp.deal.url] for opp in opps]\n",
     "\n",
     "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:24px\">\"The Price is Right\" - Deal Hunting Agentic AI</div>')\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:24px\">\"The Price is Right\" - Deal Hunting Agentic AI</div>'\n",
+    "            '<div style=\"text-align: center;font-size:24px\">「価格は適正」 - 掘り出し物探しエージェントAI</div>'\n",
+    "        )\n",
     "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:14px\">Deals surfaced so far:</div>')\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:14px\">Deals surfaced so far:</div>'\n",
+    "            '<div style=\"text-align: center;font-size:14px\">これまでに浮上した取引:</div>'\n",
+    "        )\n",
     "    with gr.Row():\n",
     "        opportunities_dataframe = gr.Dataframe(\n",
-    "            headers=[\"Description\", \"Price\", \"Estimate\", \"Discount\", \"URL\"],\n",
+    "            headers=[\n",
+    "                #\"Description\", \"Price\", \"Estimate\", \"Discount\", \"URL\"\n",
+    "                \"説明\", \"価格\", \"見積\", \"割引\", \"URL\"\n",
+    "            ],\n",
     "            wrap=True,\n",
     "            column_widths=[4, 1, 1, 1, 2],\n",
     "            row_count=10,\n",
@@ -99,18 +115,29 @@
     "    def get_table(opps):\n",
     "        return [[opp.deal.product_description, opp.deal.price, opp.estimate, opp.discount, opp.deal.url] for opp in opps]\n",
     "\n",
+    "    # この関数は Gradio のテーブルでユーザーが選んだ案件を取り出し、メッセンジャーを使ってアラート通知を行う\n",
     "    def do_select(opportunities, selected_index: gr.SelectData):\n",
     "        row = selected_index.index[0]\n",
     "        opportunity = opportunities[row]\n",
+    "        # エージェントフレームワークのメッセンジャーで通知\n",
     "        agent_framework.planner.messenger.alert(opportunity)\n",
     "\n",
     "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:24px\">\"The Price is Right\" - Deal Hunting Agentic AI</div>')\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:24px\">\"The Price is Right\" - Deal Hunting Agentic AI</div>'\n",
+    "            '<div style=\"text-align: center;font-size:24px\">「価格は適正」 - 掘り出し物探しエージェントAI</div>'\n",
+    "        )\n",
     "    with gr.Row():\n",
-    "        gr.Markdown('<div style=\"text-align: center;font-size:14px\">Deals surfaced so far:</div>')\n",
+    "        gr.Markdown(\n",
+    "            #'<div style=\"text-align: center;font-size:14px\">Deals surfaced so far:</div>'\n",
+    "            '<div style=\"text-align: center;font-size:14px\">これまでに浮上した取引:</div>'\n",
+    "        )\n",
     "    with gr.Row():\n",
     "        opportunities_dataframe = gr.Dataframe(\n",
-    "            headers=[\"Description\", \"Price\", \"Estimate\", \"Discount\", \"URL\"],\n",
+    "            headers=[\n",
+    "                #\"Description\", \"Price\", \"Estimate\", \"Discount\", \"URL\"\n",
+    "                \"説明\", \"価格\", \"見積\", \"割引\", \"URL\"\n",
+    "            ],\n",
     "            wrap=True,\n",
     "            column_widths=[4, 1, 1, 1, 2],\n",
     "            row_count=10,\n",
@@ -131,7 +158,7 @@
    "source": [
     "# コードの時間\n",
     "\n",
-    "そして今、私たちはrish_is_right.pyコードに移動し、その後にfurce_is_right_final.pyが続きます"
+    "そして今、私たちは`rish_is_right.py`コードに移動し、その後に`furce_is_right_final.py`が続きます"
    ]
   },
   {
@@ -161,17 +188,17 @@
    "id": "242d1243-fbec-4807-988b-8f70c8c9b806",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;\">\n",
+    "<table style=\"margin: 0; text-align: left;\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ fality.jpg\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../important.jpg\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃900;\">しかし、待ってください!!もっとあります.. </h2>\n",
-    "            <SPAN STYLE = \"Color：＃900;\">まだ製品価格にうんざりしていない場合は、これをもう少し構築しました！<br/>\n",
-    "            私のレポを見ると、href = \"https://github.com/ed-donner/tech2ai\"> tech2ai </a>では、segment3/lab1は純粋なpytorchにおける価格設定のニューラルネットワーク実装です。それはかなりうまくいきます.. <br/>\n",
-    "            また、私のレポ<a href = \"https://github.com/ed-donner/agentic\">エージェント</a>ワークショップフォルダーには、さらに採用されたエージェントプロジェクトがあります。複数のツールを使用するAutonomousPlanningagentと呼ばれる計画剤の新しいバージョンと、Claude-3.7を使用してテキストを書くメッセージがあります。 AutonomousPlanningagentは、幻想的なOpenai Agents SDKと人類の強力なMCPプロトコルを使用しています。<br/>\n",
-    "            エージェントとMCPに興味があり、詳細を知りたい場合は、<a href = \"https://edwarddonner.com/2025/05/28/connecting-my-an-llm-expert-and-leader/\">コンパニオンコースは!! LLMSで貴重なビジネスを構築しようとしているリーダーと創業者向けのもう1つのコース。\n",
+    "            <h2 style=\"color:#900;\">でも待ってください！まだありますよ…</h2>\n",
+    "            <span style=\"color:#900;\">まだ商品の価格設定に飽きていないなら😂 もっといろいろ作ってみました！<br/>\n",
+    "            私のリポジトリ <a href=\"https://github.com/ed-donner/tech2ai\">tech2ai</a> の segment3/lab1 を見ると、純粋な PyTorch でプライサーをニューラルネットワークで実装したものが載っています。なかなか良い出来です。<br/>\n",
+    "            また、私のリポジトリ <a href=\"https://github.com/ed-donner/agentic\">Agentic</a> の workshop フォルダを見ると、同じ Agent プロジェクトがさらに進化しています。複数のツールを使う PlanningAgent の新しいバージョンである AutonomousPlanningAgent と、claude-3.7 を使ってテキストを書き込む MessagingAgent があります。AutonomousPlanningAgent は、素晴らしい OpenAI Agents SDK と Anthropic の強力な MCP プロトコルを使用しています。<br/>\n",
+    "            エージェントと MCP に興味があり、さらに詳しく知りたい場合は、<a href=\"https://edwarddonner.com/2025/05/28/connecting-my-courses-become-an-llm-expert-and-leader/\">Complete Agentic AI Engineering Course</a> という関連コースも用意していますので、こちらもご興味があるかもしれません (まだ私のコースに飽きていない場合はぜひ受講してください)。また、LLM を使用して価値あるビジネスを構築したいと考えているリーダーや創業者向けのコースもあります。\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -183,15 +210,15 @@
    "id": "331a2044-566f-4866-be4d-7542b7dfdf3f",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;\">\n",
+    "<table style=\"margin: 0; text-align: left;\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ありがとうyou.jpg\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../thankyou.jpg\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃090;\">おめでとうございます!!! </h2>\n",
-    "            <Span style = \"color：＃090;\">\n",
-    "                それはとても素晴らしいので、あなたは最後までそれを作りました！私の最も心のこもったおめでとう。連絡を取り合ってください！私は<a href = \"https://www.linkedin.com/in/eddonner/\"> linkedin </a>ここにまだ接続されておらず、<a https://x.com/edwarddonner \"> @edwarddonner </a>そして、私の編集者は、もう一度言及しなかった場合、私と交差するでしょう。学生がこのコースをUdemyで評価するとき、それは大きな違いをもたらします。これは、Udemyが他の人に見せるかどうかを決定する主な方法の1つです。 <br/> <br/> 8週間私と一緒に我慢して、最終セルに到達してくれてありがとう！ LLMエンジニアとしてのあなたのキャリアについてすべてを聞いて興奮しています。コースの完了についてLinkedInに投稿してタグを付けた場合、私はあなたの成果を増幅するために重量を示します。 <br/> <b>このフィールドにいるのにもっと良い時間を選ぶことはできなかったでしょう。</b>\n",
+    "            <h2 style=\"color:#090;\">おめでとうございます！そしてありがとうございます！</h2>\n",
+    "            <span style=\"color:#090;\">\n",
+    "                最後まで読んでいただき、本当に素晴らしいです！心からお祝い申し上げます。これからも連絡を取り合いましょう！もしまだ繋がっていないようでしたら、<a href=\"https://www.linkedin.com/in/eddonner/\">LinkedIn</a>LinkedInでも連絡を取り合っています。Xでは<a href=\"https://x.com/edwarddonner\">@edwarddonner</a>です。最後にもう一度言わないと編集者に怒られてしまうかもしれませんが、Udemyでこのコースを受講生が評価してくれるかどうかは、Udemyがこのコースを他の受講生に公開するかどうかを決める主な基準の一つです。<br/><br/>8週間もの間、最後までお付き合いいただき、本当にありがとうございました！LLMエンジニアとしてのあなたのキャリアについて、ぜひお聞かせください。コース修了についてLinkedInに投稿して、私をタグ付けしていただければ、あなたの功績をもっと大きく伝えます。<br/><b>この分野に参入するのに、これ以上ない絶好のタイミングだったと思います。</b>\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -201,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9dd0a27-7d46-4c9e-bbe4-a61c9c899c99",
+   "id": "81f4dbf7-0f3c-4787-8fbc-e3c21bdb932a",
    "metadata": {},
    "outputs": [],
    "source": []
